--- a/config/sites/default/views.view.find_a_service.yml
+++ b/config/sites/default/views.view.find_a_service.yml
@@ -181,6 +181,9 @@ display:
           parse_mode: terms
           min_length: null
           fields:
+            - location_services_specialty_condition_name
+            - location_services_specialty_condition_synonym
+            - location_services_title
             - rendered_item
             - service_related_condition
             - service_related_condition_synonym
