Fix location button icon.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
@@ -12,4 +12,4 @@ location:
   link:
     href: "/"
     text: "Map & Directions"
-    icon: "th-find-hospital.svg"
+    button_icon: "th-find-hospital.svg"
