--- a/config/sites/default/core.entity_view_display.node.profile.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.search_index.yml
@@ -25,7 +25,7 @@ dependencies:
     - field.field.node.profile.field_profile_practid
     - field.field.node.profile.field_profile_professional_title
     - field.field.node.profile.field_profile_scheduling
-    - field.field.node.profile.field_profile_type
+    - field.field.node.profile.field_profile_employment_type
     - field.field.node.profile.field_profile_video
     - field.field.node.profile.field_rating_comment_count
     - field.field.node.profile.field_rating_comments_ref
@@ -119,7 +119,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_profile_type:
+  field_profile_employment_type:
     type: list_default
     weight: 10
     region: content
