--- a/config/sites/default/field.storage.node.field_profile_employment_type.yml
+++ b/config/sites/default/field.storage.node.field_profile_employment_type.yml
@@ -5,8 +5,8 @@ dependencies:
   module:
     - node
     - options
-id: node.field_profile_type
-field_name: field_profile_type
+id: node.field_profile_employment_type
+field_name: field_profile_employment_type
 entity_type: node
 type: list_string
 settings:
