--- a/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
@@ -94,7 +94,7 @@ process:
       source: professional_title
     -
       plugin: towerhealth_utf_8
-  field_profile_type:
+  field_profile_employment_type:
     -
       plugin: static_map
       source:
