--- a/config/sites/default/field.field.node.profile.field_profile_type.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_type.yml
@@ -1,22 +1,21 @@
-uuid: 08121420-7e37-42d9-b903-343ab0d1c2df
+uuid: 897be702-7a6b-4e26-8fd0-cf664254e775
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_profile_employment_type
+    - field.storage.node.field_profile_type
     - node.type.profile
   module:
     - options
-id: node.profile.field_profile_employment_type
-field_name: field_profile_employment_type
+id: node.profile.field_profile_type
+field_name: field_profile_type
 entity_type: node
 bundle: profile
-label: 'Employment Type'
+label: Type
 description: ''
 required: false
 translatable: false
-default_value:
-  - {  }
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: list_string
