--- a/config/sites/default/core.entity_view_display.node.profile.page_header.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.page_header.yml
@@ -36,6 +36,7 @@ dependencies:
     - node.type.profile
   module:
     - media
+    - options
     - telephone
     - user
 id: node.profile.page_header
@@ -68,6 +69,13 @@ content:
     third_party_settings: {  }
     type: telephone_link
     region: content
+  field_profile_type:
+    type: list_default
+    weight: 6
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_profile_video:
     type: entity_reference_entity_view
     weight: 2
@@ -118,7 +126,6 @@ hidden:
   field_profile_practid: true
   field_profile_professional_title: true
   field_profile_scheduling: true
-  field_profile_type: true
   field_rating_comment_count: true
   field_rating_comments_ref: true
   links: true
