--- a/config/sites/default/facets.facet.provider_type.yml
+++ b/config/sites/default/facets.facet.provider_type.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - search_api
 id: provider_type
-name: 'Provider Type'
+name: Type
 url_alias: provider_type
 weight: 2
 min_count: 0
@@ -24,7 +24,7 @@ widget:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
     show_reset_link: 1
-    reset_text: 'All Providers'
+    reset_text: All
     hide_reset_when_no_selection: 0
 query_operator: or
 use_hierarchy: false
@@ -39,20 +39,13 @@ processor_configs:
     weights:
       sort: 40
     settings:
-      sort: DESC
-  exclude_specified_items:
-    processor_id: exclude_specified_items
-    weights:
-      build: 50
-    settings:
-      exclude: 'independent, contracted'
-      regex: false
+      sort: ASC
   facets_custom_label:
     processor_id: facets_custom_label
     weights:
       build: 50
     settings:
-      replacement_values: "r|tower_health_employed|Physicians Only\r\nr|app_employed|Advanced Practitioners Only"
+      replacement_values: "r|doctor|Doctors\r\nr|nurse_practitioner|Nurse Practitioners\r\nr|midwife|Midwives\r\nr|physician_assistant|Physicians Assistants"
   list_item:
     processor_id: list_item
     weights:
