--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -3,26 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_location_geo
     - field.storage.node.field_services_ref
     - field.storage.node.field_conditions_ref
     - field.storage.taxonomy_term.field_condition_synonym
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
+    - field.storage.node.field_profile_languages
+    - field.storage.node.field_location_geo
+    - field.storage.node.field_location_type
     - field.storage.node.field_location_ref
     - field.storage.node.field_location_id
-    - field.storage.node.field_profile_languages
-    - field.storage.node.field_profile_employment_type
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.node.field_profile_type
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
   module:
-    - search_api_location
     - node
     - taxonomy
+    - search_api_location
     - search_api_solr
     - search_api
     - towerhealth_misc
@@ -171,13 +171,13 @@ field_settings:
       config:
         - field.storage.node.field_profile_languages
   provider_profile_type:
-    label: 'Provider Type'
+    label: 'Provider » Type'
     datasource_id: 'entity:node'
-    property_path: field_profile_employment_type
+    property_path: field_profile_type
     type: string
     dependencies:
       config:
-        - field.storage.node.field_profile_employment_type
+        - field.storage.node.field_profile_type
   provider_sort_field:
     label: 'Provider Sort Field'
     property_path: provider_sort_field
