--- a/config/sites/default/views.view.auto_provider.yml
+++ b/config/sites/default/views.view.auto_provider.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - search_api
 id: auto_provider
-label: 'Autocomplete: Provider'
+label: 'Autocomplete: Doctor'
 module: views
 description: ''
 tag: ''
