--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.article
     - taxonomy.vocabulary.article_types
   module:
+    - better_exposed_filters
     - node
     - taxonomy
     - user
@@ -40,7 +41,7 @@ display:
           query_comment: ''
           query_tags: {  }
       exposed_form:
-        type: basic
+        type: bef
         options:
           submit_button: Filter
           reset_button: false
@@ -49,6 +50,24 @@ display:
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
+          input_required: false
+          text_input_required: 'Select any filter and click on Apply to see results'
+          bef:
+            general:
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              autosubmit: true
+              autosubmit_exclude_textfield: true
+              autosubmit_hide: true
+            field_article_type_ref_target_id:
+              bef_format: bef
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
+          text_input_required_format: basic_html
       pager:
         type: full
         options:
@@ -172,7 +191,7 @@ display:
             identifier: field_article_type_ref_target_id
             required: false
             remember: false
-            multiple: false
+            multiple: true
             remember_roles:
               authenticated: authenticated
               anonymous: '0'
@@ -252,7 +271,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: news
+      path: articles
       exposed_block: true
     cache_metadata:
       max-age: -1
