Fix page header with type.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
@@ -1,4 +1,5 @@
 name: "McGlinn Cancer Institute"
+button_icon: "th-find-hospital.svg"
 address_rows: 
   - "420 S. Fifth Avenue"
   - "West Reading, PA 19611"
