--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -54,6 +54,7 @@ locations:
         - "420 S. Fifth Avenue"
         - "West Reading, PA 19611"
       direction_url: '#'
+      button_icon: 'th-find-hospital.svg'
       phones:
         - label: Main
           number: "484-555-5555"
@@ -68,6 +69,7 @@ locations:
         - "420 S. Fifth Avenue"
         - "West Reading, PA 19611"
       direction_url: '#'
+      button_icon: 'th-find-hospital.svg'
       phones:
         - label: Main
           number: "484-555-5555"
