--- a/config/sites/default/facets.facet.location.yml
+++ b/config/sites/default/facets.facet.location.yml
@@ -19,8 +19,8 @@ widget:
   type: dropdown
   config:
     show_numbers: false
-    default_option_label: Choose
-query_operator: or
+    default_option_label: ''
+query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
