--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -7,7 +7,6 @@ dependencies:
     - node.type.article
     - taxonomy.vocabulary.article_types
   module:
-    - better_exposed_filters
     - node
     - taxonomy
     - user
@@ -41,33 +40,15 @@ display:
           query_comment: ''
           query_tags: {  }
       exposed_form:
-        type: bef
+        type: basic
         options:
-          submit_button: Filter
+          submit_button: Search
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
-          input_required: false
-          text_input_required: 'Select any filter and click on Apply to see results'
-          bef:
-            general:
-              allow_secondary: false
-              secondary_label: 'Advanced options'
-              autosubmit: true
-              autosubmit_exclude_textfield: true
-              autosubmit_hide: true
-            field_article_type_ref_target_id:
-              bef_format: bef
-              more_options:
-                bef_select_all_none: false
-                bef_collapsible: false
-                is_secondary: false
-                rewrite:
-                  filter_rewrite_values: ''
-          text_input_required_format: basic_html
       pager:
         type: full
         options:
@@ -236,17 +217,7 @@ display:
             label: ''
           granularity: second
       title: News
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: 'Showing @start - @end of @total results'
-          plugin_id: result
+      header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -272,7 +243,7 @@ display:
     display_options:
       display_extenders: {  }
       path: articles
-      exposed_block: true
+      exposed_block: false
     cache_metadata:
       max-age: -1
       contexts:
