--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
@@ -224,7 +224,7 @@ cta:
   link:
     url: "/"
     text: "484-628-HELP"
-    icon: "th-cal.svg"
+    button_icon: "th-cal.svg"
     variation: "right"
 careCircle:
   title: Compassionate Care Principles
