--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-service.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-service.yml
@@ -177,5 +177,5 @@ cta:
   link:
     url: "/"
     text: "Find a Doctor"
-    icon: "th-find-provider.svg"
+    button_icon: "th-find-provider.svg"
     variation: "right"
