--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/healthbreak-landing.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/healthbreak-landing.yml
@@ -135,5 +135,5 @@ cta:
   link:
     url: "/"
     text: "Find a Doctor"
-    icon: "th-find-provider.svg"
+    button_icon: "th-find-provider.svg"
     variation: "right"
