--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--simple.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--simple.yml
@@ -163,5 +163,5 @@ cta:
   link:
     url: "/"
     text: "484-628-HELP"
-    icon: "th-cal.svg"
+    button_icon: "th-cal.svg"
     variation: "right"
