--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
@@ -149,5 +149,5 @@ cta:
   link:
     url: "/"
     text: "484-628-HELP"
-    icon: "th-cal.svg"
+    button_icon: "th-cal.svg"
     variation: "right"
