--- a/config/sites/default/block.block.article_hero_block.yml
+++ b/config/sites/default/block.block.article_hero_block.yml
@@ -21,6 +21,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /articles
+    pages: /articles/all
     negate: false
     context_mapping: {  }
