--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - node.type.article
+    - taxonomy.vocabulary.article_types
   module:
     - node
     - user
+    - views_taxonomy_term_name_depth
 id: article_listing
 label: 'Article Listing'
 module: views
@@ -170,18 +172,18 @@ display:
       empty: {  }
       relationships: {  }
       arguments:
-        field_article_type_ref_target_id:
-          id: field_article_type_ref_target_id
-          table: node__field_article_type_ref
-          field: field_article_type_ref_target_id
+        term_node_taxonomy_name_depth:
+          id: term_node_taxonomy_name_depth
+          table: node_field_data
+          field: term_node_taxonomy_name_depth
           relationship: none
           group_type: group
           admin_label: ''
           default_action: default
           exception:
-            value: ''
+            value: all
             title_enable: false
-            title: Articles
+            title: All
           title_enable: false
           title: ''
           default_argument_type: raw
@@ -198,14 +200,23 @@ display:
             sort_order: asc
             number_of_records: 0
             format: default_summary
-          specify_validation: false
+          specify_validation: true
           validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
+            type: taxonomy_term_name
+            fail: empty
+          validate_options:
+            bundles:
+              article_types: article_types
+            operation: view
+            transform: true
+            access: false
+          depth: '0'
+          vocabularies:
+            article_types: article_types
           break_phrase: true
-          not: false
-          plugin_id: numeric
+          use_taxonomy_term_path: false
+          entity_type: node
+          plugin_id: taxonomy_index_name_depth
       display_extenders: {  }
       use_ajax: false
     cache_metadata:
