--- a/config/sites/default/block.block.breadcrumbs.yml
+++ b/config/sites/default/block.block.breadcrumbs.yml
@@ -21,13 +21,14 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/locations/*\r\n/providers/*\r\n/services/*"
+    pages: "/locations/*\r\n/doctors/*\r\n/services/*"
     negate: true
     context_mapping: {  }
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
       page: page
+      profile: profile
     negate: true
     context_mapping:
       node: '@node.node_route_context:node'
