--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -5,11 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - node.type.article
-    - taxonomy.vocabulary.article_types
   module:
     - node
     - user
-    - views_taxonomy_term_name_depth
 id: article_listing
 label: 'Article Listing'
 module: views
@@ -166,57 +164,26 @@ display:
           expose:
             label: ''
           granularity: second
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: node
+          entity_field: title
+          plugin_id: standard
       title: Articles
       header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
-      arguments:
-        term_node_taxonomy_name_depth:
-          id: term_node_taxonomy_name_depth
-          table: node_field_data
-          field: term_node_taxonomy_name_depth
-          relationship: none
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: raw
-          default_argument_options:
-            index: 1
-            use_alias: false
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            items_per_page: 25
-            override: false
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: true
-          validate:
-            type: taxonomy_term_name
-            fail: empty
-          validate_options:
-            bundles:
-              article_types: article_types
-            operation: view
-            transform: true
-            access: false
-          depth: '0'
-          vocabularies:
-            article_types: article_types
-          break_phrase: true
-          use_taxonomy_term_path: false
-          entity_type: node
-          plugin_id: taxonomy_index_name_depth
+      arguments: {  }
       display_extenders: {  }
       use_ajax: false
     cache_metadata:
@@ -224,7 +191,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
@@ -243,7 +209,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
