--- a/config/sites/default/views.view.taxonomy_term.yml
+++ b/config/sites/default/views.view.taxonomy_term.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
   module:
+    - datetime
     - node
     - taxonomy
     - user
@@ -50,12 +51,17 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
           items_per_page: 10
           offset: 0
           id: 0
           total_pages: 0
+          tags:
+            previous: ‹‹
+            next: ››
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -64,35 +70,35 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
+          quantity: 5
       sorts:
-        sticky:
-          id: sticky
-          table: taxonomy_index
-          field: sticky
-          order: DESC
-          plugin_id: standard
+        field_article_date_value:
+          id: field_article_date_value
+          table: node__field_article_date
+          field: field_article_date_value
           relationship: none
           group_type: group
           admin_label: ''
-          exposed: false
-          expose:
-            label: ''
-        created:
-          id: created
-          table: taxonomy_index
-          field: created
           order: DESC
-          plugin_id: date
-          relationship: none
-          group_type: group
-          admin_label: ''
           exposed: false
           expose:
             label: ''
           granularity: second
+          plugin_id: datetime
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: node
+          entity_field: title
+          plugin_id: standard
       arguments:
         tid:
           id: tid
@@ -227,20 +233,7 @@ display:
         type: 'entity:node'
         options:
           view_mode: teaser
-      header:
-        entity_taxonomy_term:
-          id: entity_taxonomy_term
-          table: views
-          field: entity_taxonomy_term
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: true
-          target: '{{ raw_arguments.tid }}'
-          view_mode: full
-          bypass_access: false
-          plugin_id: entity
+      header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -253,44 +246,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      max-age: -1
-      tags: {  }
-  feed_1:
-    id: feed_1
-    display_title: Feed
-    display_plugin: feed
-    position: 2
-    display_options:
-      query:
-        type: views_query
-        options: {  }
-      pager:
-        type: some
-        options:
-          items_per_page: 10
-          offset: 0
-      path: taxonomy/term/%/feed
-      displays:
-        page_1: page_1
-        default: '0'
-      style:
-        type: rss
-        options:
-          description: ''
-          grouping: {  }
-          uses_fields: false
-      row:
-        type: node_rss
-        options:
-          relationship: none
-          view_mode: default
-      display_extenders: {  }
-    cache_metadata:
-      contexts:
-        - 'languages:language_interface'
-        - url
         - 'user.node_grants:view'
         - user.permissions
       max-age: -1
