--- a/config/sites/default/views.view.taxonomy_term.yml
+++ b/config/sites/default/views.view.taxonomy_term.yml
@@ -233,7 +233,17 @@ display:
         type: 'entity:node'
         options:
           view_mode: teaser
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          content: 'Showing @start - @end of @total results'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
