--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -179,7 +179,17 @@ display:
           entity_field: title
           plugin_id: standard
       title: Articles
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Showing @start - @end of @total results'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
